# eci35_hetprog

lab1/: add_array_serial_skeleton.cc  add_array_sycl.cc  serie  sycl
lab2/: CMakeLists.txt  malo  pi_taylor_reduction.cc  pi_taylor_serial.cc  pi_taylor_wg.cc  serie  wgs
lab3/: CMakeCache.txt  Makefile  cmake_install.cmake  mul_array_sycl.cc  mul_array_sycl_optimized.cc  simple
lab3/fpga_compile_report.prj/: kernel_system.qip  kernel_system.v  mul_array_sycl_optimized_5133f7_ffbbc0_di.v  mul_array_sycl_optimized_5133f7_ffbbc0_di_hw.tcl  mul_array_sycl_optimized_5133f7_ffbbc0_di_inst.v  mul_array_sycl_optimized_5133f7_ffbbc0_sys.v  mul_array_sycl_optimized_5133f7_ffbbc0_sys_hw.tcl  sys_description.hex  sys_description.txt
lab3/renombre1/: kernel_system.qip  kernel_system.v  mul_array_sycl_7f7985_1ecb78.bc.xml  mul_array_sycl_7f7985_1ecb78_di.v  mul_array_sycl_7f7985_1ecb78_di_hw.tcl  mul_array_sycl_7f7985_1ecb78_di_inst.v  mul_array_sycl_7f7985_1ecb78_sys.v  mul_array_sycl_7f7985_1ecb78_sys_hw.tcl  sys_description.hex  sys_description.txt
lab3/renombre2/: kernel_system.qip  kernel_system.v  mul_array_sycl_optimized_b9324a_1c6e8e.bc.xml  mul_array_sycl_optimized_b9324a_1c6e8e_di.v  mul_array_sycl_optimized_b9324a_1c6e8e_di_hw.tcl  mul_array_sycl_optimized_b9324a_1c6e8e_di_inst.v  mul_array_sycl_optimized_b9324a_1c6e8e_sys.v  mul_array_sycl_optimized_b9324a_1c6e8e_sys_hw.tcl  sys_description.hex  sys_description.txt
lab3/renombre3/: kernel_system.qip  kernel_system.v  mul_array_sycl_optimized_545af5_9576ac.bc.xml  (+7 more)
lab4/: add_array_pipes_sycl.cc
(+282 files in other folders)
